--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <!-- fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Barlow:wght@400;900&family=Tinos&display=swap"
+    <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@400;900&family=Tinos&display=swap"
       rel="stylesheet"
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
